fix(sonar): code smells y security B en controllers y TransferenciaInternacional
Controllers:
- @ApiResponses wrapper -> @ApiResponse repetidos (S1192)
- Stream.collect(Collectors.toList()) -> Stream.toList() (S6204)
- Constantes REL_PENDIENTES, REL_CONSOLIDADO, MSG_CLAVE para literales
  duplicados (S1192)
- Lambda c -> c.getValue() -> method reference Cookie::getValue (S1612)
- Quitar imports Collectors sin usar

TransferenciaInternacionalServiceImpl:
- Sanitizar getMontoUsd() y getNumeroCuenta() en mensaje de auditoria
  para eliminar hotspot S5145 restante (Security Rating B -> A)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>