@@ -6,7 +6,6 @@ import fe.banco_digital.exception.OperacionNoPermitidaException;
 import fe.banco_digital.service.AdminCuentaService;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
-import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import org.springframework.hateoas.CollectionModel;
 import org.springframework.hateoas.EntityModel;
@@ -17,7 +16,6 @@ import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.*;
 
@@ -25,6 +23,8 @@ import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.*;
 @RequestMapping("/api/v1/admin/cuentas")
 @Tag(name = "Admin - Cuentas", description = "Gestión de solicitudes de apertura de cuentas por parte del administrador")
 public class AdminCuentaController {
+
+    private static final String REL_PENDIENTES = "pendientes";
 
     private final AdminCuentaService adminCuentaService;
 
@@ -42,7 +42,7 @@ public class AdminCuentaController {
                         linkTo(methodOn(AdminCuentaController.class).aprobarApertura(s.getIdCuenta(), null)).withRel("aprobar"),
                         linkTo(methodOn(AdminCuentaController.class).rechazarApertura(s.getIdCuenta(), null)).withRel("rechazar")
                 ))
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(CollectionModel.of(items,
                 linkTo(methodOn(AdminCuentaController.class).listarPendientes()).withSelfRel()
         ));
@@ -50,11 +50,9 @@ public class AdminCuentaController {
 
     @Operation(summary = "Aprobar apertura de cuenta",
             description = "Activa la cuenta que estaba en PENDIENTE_APROBACION.")
-    @ApiResponses({
-            @ApiResponse(responseCode = "200", description = "Cuenta aprobada exitosamente"),
-            @ApiResponse(responseCode = "400", description = "La cuenta no está en estado pendiente"),
-            @ApiResponse(responseCode = "404", description = "Cuenta no encontrada")
-    })
+    @ApiResponse(responseCode = "200", description = "Cuenta aprobada exitosamente")
+    @ApiResponse(responseCode = "400", description = "La cuenta no está en estado pendiente")
+    @ApiResponse(responseCode = "404", description = "Cuenta no encontrada")
     @PatchMapping("/{id}/aprobar")
     public ResponseEntity<EntityModel<DecisionAperturaRespuestaDTO>> aprobarApertura(
             @PathVariable Long id,
@@ -62,17 +60,15 @@ public class AdminCuentaController {
         DecisionAperturaRespuestaDTO dto = adminCuentaService.aprobarApertura(id, admin.getUsername());
         return ResponseEntity.ok(EntityModel.of(dto,
                 linkTo(methodOn(AdminCuentaController.class).aprobarApertura(id, null)).withSelfRel(),
-                linkTo(methodOn(AdminCuentaController.class).listarPendientes()).withRel("pendientes")
+                linkTo(methodOn(AdminCuentaController.class).listarPendientes()).withRel(REL_PENDIENTES)
         ));
     }
 
     @Operation(summary = "Rechazar apertura de cuenta",
             description = "Marca como INACTIVA la cuenta que estaba en PENDIENTE_APROBACION.")
-    @ApiResponses({
-            @ApiResponse(responseCode = "200", description = "Solicitud rechazada exitosamente"),
-            @ApiResponse(responseCode = "400", description = "La cuenta no está en estado pendiente"),
-            @ApiResponse(responseCode = "404", description = "Cuenta no encontrada")
-    })
+    @ApiResponse(responseCode = "200", description = "Solicitud rechazada exitosamente")
+    @ApiResponse(responseCode = "400", description = "La cuenta no está en estado pendiente")
+    @ApiResponse(responseCode = "404", description = "Cuenta no encontrada")
     @PatchMapping("/{id}/rechazar")
     public ResponseEntity<EntityModel<DecisionAperturaRespuestaDTO>> rechazarApertura(
             @PathVariable Long id,
@@ -80,17 +76,15 @@ public class AdminCuentaController {
         DecisionAperturaRespuestaDTO dto = adminCuentaService.rechazarApertura(id, admin.getUsername());
         return ResponseEntity.ok(EntityModel.of(dto,
                 linkTo(methodOn(AdminCuentaController.class).rechazarApertura(id, null)).withSelfRel(),
-                linkTo(methodOn(AdminCuentaController.class).listarPendientes()).withRel("pendientes")
+                linkTo(methodOn(AdminCuentaController.class).listarPendientes()).withRel(REL_PENDIENTES)
         ));
     }
 
     @Operation(summary = "Procesar decisión sobre solicitud de apertura",
             description = "Acepta {\"decision\":\"APROBAR\"} o {\"decision\":\"RECHAZAR\"}")
-    @ApiResponses({
-            @ApiResponse(responseCode = "200", description = "Decisión aplicada exitosamente"),
-            @ApiResponse(responseCode = "400", description = "Decisión inválida o cuenta no pendiente"),
-            @ApiResponse(responseCode = "404", description = "Cuenta no encontrada")
-    })
+    @ApiResponse(responseCode = "200", description = "Decisión aplicada exitosamente")
+    @ApiResponse(responseCode = "400", description = "Decisión inválida o cuenta no pendiente")
+    @ApiResponse(responseCode = "404", description = "Cuenta no encontrada")
     @PostMapping("/{id}/decision")
     public ResponseEntity<EntityModel<DecisionAperturaRespuestaDTO>> procesarDecision(
             @PathVariable Long id,
@@ -104,7 +98,7 @@ public class AdminCuentaController {
         };
         return ResponseEntity.ok(EntityModel.of(dto,
                 linkTo(methodOn(AdminCuentaController.class).procesarDecision(id, null, null)).withSelfRel(),
-                linkTo(methodOn(AdminCuentaController.class).listarPendientes()).withRel("pendientes")
+                linkTo(methodOn(AdminCuentaController.class).listarPendientes()).withRel(REL_PENDIENTES)
         ));
     }
 }
